syntax = "proto3";

package go.micro.srv.master;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service MasterService{
  rpc CreateCompany(RequestCompany) returns(ResponseCreateSuccess);
  rpc UpdateCompany(RequestCompany) returns(ResponseSuccess);
  rpc DeleteCompany(RequestDelete) returns(ResponseSuccess);
  rpc CreateAddressType(RequestAddressType)returns(ResponseCreateSuccess);
  rpc UpdateAddressType(RequestAddressType)returns(ResponseSuccess);
  rpc DeleteAddressType(RequestDelete) returns(ResponseSuccess);
  rpc GetAddressTypeById(RequestKey) returns(ResponseAddressType);
  rpc GetAddressTypeByName(RequestByName)returns(ResponseAddressType);
  rpc GetAllAddressTypes(google.protobuf.Empty) returns(ResponseAddressType);
  rpc GetAllAddressTypeNames(RequestByName)returns(ResponseAddressType);
  rpc CreateRegion(RequestRegion) returns(ResponseCreateSuccess);
  rpc UpdateRegion(RequestRegion) returns(ResponseSuccess);
  rpc DeleteRegion(RequestDelete)returns(ResponseSuccess);
  rpc GetAllRegion(google.protobuf.Empty) returns(ResponseRegion);
  rpc GetRegionById(RequestKey)returns(ResponseRegion);
  rpc GetRegionByName(RequestByName)returns(ResponseRegion);
  rpc CreateState(RequestState)returns(ResponseCreateSuccess);
  rpc UpdateState(RequestState)returns(ResponseSuccess);
  rpc DeleteState(RequestDelete)returns(ResponseSuccess);
  rpc GetStateById(RequestKey)returns(ResponseState);
  rpc GetStateByCountryId(RequestKey)returns(ResponseState);
  rpc GetStateByName(RequestByName)returns(ResponseState);
  rpc GetAllStates(google.protobuf.Empty)returns(ResponseState);
  rpc CreateContact(RequestContact) returns(ResponseCreateSuccess);
  rpc UpdateContact(RequestContact) returns(ResponseSuccess);
  rpc DeleteContact(RequestDelete) returns (ResponseSuccess);
  rpc ContactById(RequestKey) returns(ResponseContact);
  rpc CreateAddress(RequestAddress) returns(ResponseCreateSuccess);
  rpc UpdateAddress(RequestAddress) returns(ResponseSuccess);
  rpc DeleteAddress(RequestDelete) returns(ResponseSuccess);
  rpc GetAddressById(RequestKey) returns(ResponseAddress);
  rpc GetAddressByName(RequestByName) returns(ResponseAddress);
  rpc CreateFleet(RequestFleet) returns(ResponseCreateSuccess);
  rpc UpdateFleet(RequestFleet) returns(ResponseSuccess);
  rpc DeleteFleet(RequestDelete) returns(ResponseSuccess);
  rpc GetFleetById(RequestKey) returns(ResponseFleet);
  rpc CreateFleetContact(RequestFleetContact) returns(ResponseCreateSuccess);
  rpc UpdateFleetContact(RequestFleetContact) returns(ResponseSuccess);
  rpc DeleteFleetContact(RequestDelete) returns(ResponseSuccess);
  rpc GetContactByFleetId(RequestKey) returns(ResponseFleetContact);
  rpc CreateFleetLocation(RequestFleetLocation)returns(ResponseCreateSuccess);
  rpc UpdateFleetLocation(RequestFleetLocation)returns(ResponseSuccess);
  rpc DeleteFleetLocation(RequestDelete)returns(ResponseSuccess);
  rpc GetLocationByFleetId(RequestKey) returns(ResponseFleetLocation);
  rpc CreateOperator(RequestOperator) returns(ResponseCreateSuccess);
  rpc UpdateOperator(RequestOperator) returns(ResponseSuccess);
  rpc DeleteOperator(RequestDelete)returns(ResponseSuccess);
  rpc GetOperatorById(RequestKey)returns(ResponseOperator);
  rpc GetOperatorsByVehicleId(RequestKey)returns(ResponseOperator);
  rpc CreateOperatorContact(RequestOperatorContact) returns(ResponseCreateSuccess);
  rpc UpdateOperatorContact(RequestOperatorContact) returns(ResponseSuccess);
  rpc DeleteOperatorContact(RequestDelete) returns(ResponseSuccess);
  rpc GetAllContactsByOperator(RequestKey) returns(ResponseOperatorContacts);
  rpc CreateOperatorLocation(RequestOperatorLocation)returns(ResponseCreateSuccess);
  rpc UpdateOperatorLocation(RequestOperatorLocation)returns(ResponseSuccess);
  rpc DeleteOperatorLocation(RequestDelete)returns(ResponseSuccess);
  rpc GetOperatorLocationByOperator(RequestKey) returns(ResponseOperatorLocation);
  rpc CreateVehicle(RequestVehicle)returns(ResponseCreateSuccess);
  rpc UpdateVehicle(RequestVehicle)returns(ResponseSuccess);
  rpc DeleteVehicle(RequestDelete) returns (ResponseSuccess);
  rpc GetVehicleById(RequestKey)returns(ResponseVehicle);
  rpc GetVehicleByRegistration(RequestByName)returns(ResponseVehicle);
  rpc GetVehiclesByFleetId(RequestKey)returns(ResponseVehicle);
  rpc CreateVehicleHistory(RequestVehicleHistory)returns(ResponseCreateSuccess);
  rpc UpdateVehicleHistory(RequestVehicleHistory)returns(ResponseSuccess);
  rpc DeleteVehicleHistory(RequestDelete)returns(ResponseSuccess);
  rpc GetVehicleHistoryByVehicleId(RequestKey)returns(ResponseVehicleHistory);
  rpc CreateVehicleLocation(RequestVehicleAddress)returns(ResponseCreateSuccess);
  rpc UpdateVehicleLocation(RequestVehicleAddress)returns(ResponseSuccess);
  rpc DeleteVehicleLocation(RequestDelete) returns(ResponseSuccess);
  rpc GetVehicleLocationByVehicle(RequestKey) returns(ResponseVehicleAddress);
  rpc CreateVehicleMake(RequestVehicleMake)returns(ResponseCreateSuccess);
  rpc UpdateVehicleMake(RequestVehicleMake)returns(ResponseSuccess);
  rpc DeleteVehicleMake(RequestDelete)returns (ResponseSuccess);
  rpc GetAllVehicleMake(google.protobuf.Empty) returns(ResponseVehicleMake);
  rpc GetVehicleMakeById(RequestKey) returns(ResponseVehicleMake);
  rpc CreateVehicleModel(RequestVehicleModel) returns(ResponseCreateSuccess);
  rpc UpdateVehicleModel(RequestVehicleModel) returns(ResponseSuccess);
  rpc DeleteVehicleModel(RequestDelete) returns(ResponseSuccess);
  rpc GetAllModelByMake(RequestKey)returns(ResponseVehicleModel);
  rpc GetModelById(RequestKey) returns(ResponseVehicleModel);
  rpc CreateVehicleReg(RequestVehicleReg) returns(ResponseCreateSuccess);
  rpc UpdateVehicleReg(RequestVehicleReg) returns(ResponseSuccess);
  rpc DeleteVehicleReg(RequestDelete) returns(ResponseSuccess);
  rpc GetAllRegistrationsByVehicleId(RequestKey) returns(ResponseVehicleReg);
  rpc GetActiveRegistrationsByVehicleId(RequestKey) returns(ResponseVehicleReg);
  rpc CreateVehicleStatus(RequestVehicleStatus) returns(ResponseCreateSuccess);
  rpc UpdateVehicleStatus(RequestVehicleStatus) returns(ResponseSuccess);
  rpc DeleteVehicleStatus(RequestDelete)returns(ResponseSuccess);
  rpc GetAllVehicleStatus(google.protobuf.Empty) returns(ResponseVehicleStatus);
  rpc CreateVehicleOpBound(RequestVehicleOprBound)returns(ResponseCreateSuccess);
  rpc UpdateVehicleOpBound(RequestVehicleOprBound)returns(ResponseSuccess);
  rpc DeleteVehicleOpBound(RequestDelete)returns(ResponseSuccess);
}

message StateProto{
  uint64 Id = 1;
  string Name = 2;
  uint64 CountryId = 3;
}
message CountryProto{
  uint64 Id = 1;
  string CountryName = 2;
  uint64 RegionId = 3;
  repeated StateProto States = 4;
  google.protobuf.Timestamp UpdatedAt = 5;
}
message ContactProto{
  uint64 Id = 1;
  string Contact = 2;
  uint64 ContactTypeId = 3;
  google.protobuf.Timestamp UpdatedAt = 4;
}
message AddressTypeProto{
  uint64 Id = 1;
  string Name = 2;
}
message RegionProto{
  uint64 Id = 1;
  string Region = 2;
  string RegionName = 3;
}
message AddressProto{
  uint64 Id = 1;
  string Address = 2;
  string Street  = 3;
  string Suburb  = 4;
  uint64 StateId = 5;
  uint64 CountryId = 6;
  uint64 AddressTypeId = 7;
  string Location = 8;
  AddressTypeProto AddressType = 9;
  StateProto State =10;
  CountryProto Country = 11;
  google.protobuf.Timestamp UpdatedAt = 12;
}
message CompanyProto{
  uint64 Id = 1;
  string Name = 2;
  uint64 AddressId = 3;
  uint64 ContactId = 4;
  AddressProto Address = 5;
  ContactProto Contact = 6;
}
message VehicleMakeProto{
  uint64 Id = 1;
  string Make = 2;
  uint64 CountryId =3;
  google.protobuf.Timestamp UpdateAt = 4;
  CountryProto Country = 5;
}
message VehicleModelProto{
  uint64 Id = 1;
  string ModelName = 2;
  string Description = 3;
  uint64 MakeId = 4;
  google.protobuf.Timestamp UpdatedAt = 5;
  VehicleMakeProto Make = 6;
}
message FleetProto{
  uint64 Id = 1;
  google.protobuf.Timestamp UpdatedAt = 2;
  string FleetCode = 3;
  string Name = 4;
  string SurName = 5;
  string OtherName = 6;
  google.protobuf.Timestamp DateRegistered = 7;
  float RegistrationDuration =8;
  uint64 FleetContactId = 9;
  uint64 FleetLocationId = 10;
  uint64 CountryId = 11;
  repeated ContactProto FleetContacts = 12;
  repeated AddressProto Address = 13;
}
message VehicleStatusProto{
  uint64 Id = 1;
  string StatusType = 2;
  string StatusName = 3;
  google.protobuf.Timestamp UpdatedAt = 4;
}
message VehicleAddressProto{
  uint64 VehicleAddress = 1;
  uint64 AddressId = 2;
  uint64 VehicleId = 3;
  bool Primary = 4;
  google.protobuf.Timestamp UpdateAt = 5;
  AddressProto Address = 6;
}
message OperatorProto{
  uint64 Id = 1;
  string Name = 2;
  string SurName = 3;
  bool Active = 4;
  string DrivingLic = 5;
  google.protobuf.Timestamp UpdateAt = 6;
  repeated OperatorLocationProto Locations = 7;
  repeated OperatorContactsProto Contacts = 8;
  repeated VehicleProto Vehicles = 9;
}
message OperatorLocationProto{
  uint64 Id = 1;
  uint64 AddressId = 2;
  uint64 OperatorId = 3;
  bool Primary = 4;
  google.protobuf.Timestamp UpdateAt = 5;
  AddressProto Address = 6;
  OperatorProto Operator = 7;
}
message OperatorContactsProto{
  uint64 Id = 1;
  uint64 ContactId = 2;
  uint64 OperatorId = 3;
  bool Primary = 4;
  ContactProto Contact = 5;
}
message VehicleOperatorBoundProto{
  uint64 Id =1;
  uint64 OperatorId = 2;
  uint64 VehicleId = 3;
  bool Active = 4;
  OperatorProto Operator = 5;
  VehicleProto Vehicle = 6;
}
message VehicleTrackRegProto{
  uint64 Id = 1;
  google.protobuf.Timestamp RegisterDate = 2;
  int32 Duration =3;
  google.protobuf.Timestamp ExpiredDate =4;
  bool Active = 5;
  uint64 VehicleId =6;
  google.protobuf.Timestamp UpdatedAt = 7;
  VehicleProto Vehicle = 8;
}
message VehicleProto{
  uint64 Id = 1;
  uint64 ModelId = 2;
  uint64 MakeId = 3;
  string Registration = 4;
  uint64 FleetId = 5;
  uint64 StatusId = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
  string OfficeName = 8;
  VehicleModelProto VehicleModel = 9;
  VehicleMakeProto VehicleMake = 10;
  VehicleStatusProto Status = 11;
  repeated VehicleAddressProto Locations =12;
  repeated VehicleOperatorBoundProto Operators = 13;
  repeated VehicleTrackRegProto Registrations = 14;
}
message VehicleHistoryProto{
  uint64 Id = 1;
  uint64 VehicleId = 2;
  google.protobuf.Timestamp ChangeDate = 3;
  string Description = 4;
  uint64 FromStatusId = 5;
  uint64 ToStatusId = 6;
  string OfficerName = 7;
  VehicleStatusProto FromStatus = 8 ;
  VehicleStatusProto ToStatus = 9;
}
message FleetContactProto{
  uint64 Id = 1;
  uint64 FleetId = 2;
  uint64 ContactId = 3;
  bool Primary = 4;
  FleetProto Fleet = 5;
  ContactProto Contact = 6;
}
message FleetLocationProto{
  uint64 Id = 1;
  uint64 FleetId = 2;
  uint64 AddressId = 3;
  bool Primary = 4;
  FleetProto Fleet = 5;
  AddressProto Address = 6;
}

message ResponseError{
  bool IsError = 1;
  bytes ErrorMessage = 2;
}

message RequestVehicleAddress{
  VehicleAddressProto VehicleAddress = 1;
}
message RequestVehicleHistory{
  VehicleHistoryProto VehicleHistory = 1;
}
message ResponseVehicleHistory{
  repeated VehicleHistoryProto VehicleHistory = 1;
  ResponseError Errors = 2;
}
message RequestVehicle{
  VehicleProto Vehicle =1;
}
message ResponseVehicle{
  repeated VehicleProto Vehicles = 1;
  ResponseError Errors = 2;
}
message RequestContact{
  ContactProto Contact =1;
}
message ResponseCreateSuccess{
  bool Success = 1;
  uint64 Id  = 2;
  ResponseError Errors = 3;
}
message RequestKey{
  uint64 Id = 1;
}
message ResponseSuccess{
  bool Success = 1;
  ResponseError Errors = 2;
}
message RequestDelete{
  uint64 Id =1;
}
message ResponseContact{
  ContactProto Contact = 1;
  ResponseError Errors = 2;
}
message RequestAddress{
  AddressProto Address =1;
}
message RequestByName{
  string Name = 1;
}
message ResponseAddress{
  repeated AddressProto Address = 1;
  ResponseError Errors = 2;
}
message RequestCompany {
  CompanyProto Company = 1;
}
message RequestAddressType{
  AddressTypeProto AddressType = 1;

}
message ResponseAddressType{
  repeated AddressTypeProto AddressType = 1;
  ResponseError Errors = 2;
}
message RequestRegion {
  RegionProto Region = 1;
}
message ResponseRegion{
  repeated RegionProto Region = 1;
  ResponseError Errors = 2;
}
message RequestState{
  StateProto State = 1;
}
message ResponseState{
  repeated StateProto State = 1;
  ResponseError Errors = 2;
}
message ResponseVehicleAddress{
  repeated VehicleAddressProto Address = 1;
  ResponseError Errors = 2;
}
message RequestVehicleMake{
  VehicleMakeProto VehicleMake =1;
}
message ResponseVehicleMake{
  repeated VehicleMakeProto VehicleMake = 1;
  ResponseError Errors = 2;
}
message RequestVehicleModel{
  VehicleModelProto VehicleModel = 1;
}
message ResponseVehicleModel{
  repeated VehicleModelProto VehicleModel = 1;
  ResponseError Errors = 2;
}
message RequestVehicleReg{
  VehicleTrackRegProto VehicleReg = 1;
}
message ResponseVehicleReg{
  repeated VehicleTrackRegProto VehicleReg = 1;
  ResponseError Errors = 2;
}
message RequestVehicleStatus{
  VehicleStatusProto VehicleStatus = 1;
}
message ResponseVehicleStatus{
  repeated VehicleStatusProto VehicleStatus = 1;
  ResponseError Errors = 2;
}
message RequestVehicleOprBound{
  VehicleOperatorBoundProto VehicleOprBound = 1;
}
message ResponseVehicleOprBound{
  repeated VehicleOperatorBoundProto VehicleOprBound = 1;
  ResponseError Errors = 2;
}
message RequestOperator{
  OperatorProto Operator = 1;
}
message ResponseOperator{
  repeated OperatorProto Operator = 1;
  ResponseError Errors = 2;
}
message RequestOperatorContact{
  uint64 Id =1;
  uint64 ContactId = 2;
  uint64 OperatorId = 3;
  bool Primary = 4;
}
message ResponseOperatorContacts{
  repeated OperatorContactsProto OperatorContacts =1;
  ResponseError Errors = 2;
}
message RequestOperatorLocation{
  OperatorLocationProto OperatorLocation = 1;
}
message ResponseOperatorLocation{
  repeated OperatorLocationProto OperatorLocation = 1;
  ResponseError Errors = 2;
}
message RequestFleet{
  FleetProto Fleet = 1;
}
message ResponseFleet{
  repeated FleetProto Fleet =1;
  ResponseError Errors = 2;
}
message RequestFleetContact{
  uint64 Id =1;
  uint64 FleetId = 2;
  uint64 ContactId = 3;
  bool Primary = 4;
}
message ResponseFleetContact{
  repeated FleetContactProto FleetContact =1;
  ResponseError Errors = 2;
}
message RequestFleetLocation{
  uint64 Id =1;
  uint64 FleetId = 2;
  uint64 AddressId = 3;
  bool Primary = 4;
}

message ResponseFleetLocation{
  repeated FleetLocationProto FleetLocation = 1;
  ResponseError Errors = 2;
}